# tgdigest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  digest_template.html  docker-compose.yml  make_video.bat  make_video.sh  render_template.html  антон лох
.github/actions/setup-docker/: action.yml
.github/workflows/: docker.yml
data/: config.json  digest_template.html  render_template.html  view_template.html
data/example/: digest_template.html  make_video.sh  render_template.html
nginx/: Dockerfile
nginx/conf.d/: default.conf
src/: action.rs  cache.rs  card_renderer.rs  cli.rs  context.rs  html_renderer.rs  main.rs  path_util.rs  post.rs  post_data.rs  task.rs  tg.rs  util.rs  workers.rs
src/workers/: block.rs  card.rs  cards.rs  digest.rs  tg.rs
