[package]
name = "tgdigest"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
# grammers-client = { path = "../grammers/lib/grammers-client", features = ["unstable_raw"] }
# grammers-session = { path = "../grammers/lib/grammers-session" }
grammers-client = { git = "https://github.com/Lonami/grammers.git", branch = "master", features = ["unstable_raw"] }
grammers-session = { git = "https://github.com/Lonami/grammers.git" , branch = "master" }
tokio = { version =  "1.33.0", features = ["signal"] }
simple_logger = "4.2.0"
futures-util = "0.3.28"
log = "0.4.20"
chrono = "0.4.31"
substring = "1.4.5"
partial_sort = "0.2.0"
chromiumoxide = { version = "0.5.4", features = ["tokio-runtime"], default-features = false }
tera = "1.19.1"

serde = "1.0.89"
serde_json = "1.0.107"