[package]
name = "tgdigest"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"]}
clap = { version = "4.4.8", features = ["derive"] }
# grammers-client = { path = "../grammers/lib/grammers-client", features = ["unstable_raw"] }
# grammers-session = { path = "../grammers/lib/grammers-session" }
# grammers-client = { git = "https://github.com/Lonami/grammers.git", branch = "master", features = ["unstable_raw"] }
# grammers-session = { git = "https://github.com/Lonami/grammers.git" , branch = "master" }
grammers-client = { git = "https://github.com/mrfeod/grammers.git", branch = "master", features = ["unstable_raw", "proxy"] }
grammers-session = { git = "https://github.com/mrfeod/grammers.git" , branch = "master" }
tokio = { version =  "1.33.0", features = ["signal"] }
simple_logger = "5.2.0"
futures-util = "0.3.32"
log = "0.4.29"
chrono = "0.4.44"
substring = "1.4.5"
partial_sort = "1.0.0"
chromiumoxide = { version = "0.9", default-features = false }
tera = "1.20.1"
path-slash = "0.x"
once_cell = "1.21.4"
uuid = { version = "1.23.0", features = [ "v4", "fast-rng" ]}
rustc-hash = { version = "2.1.2", default-features = false }

serde = "1.0.228"
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = ["bundled"] }